--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -7,6 +7,7 @@ on:
 
 jobs:
   build:
+    name: Build Stage
     runs-on: ubuntu-latest
 
     steps:
@@ -25,23 +26,63 @@ jobs:
 
       - name: Build and push Docker image
         run: |
-          docker build -t docker.io/your-username/sample-webapp:${{ github.sha }} .
-          docker push docker.io/your-username/sample-webapp:${{ github.sha }}
+          IMAGE=docker.io/${{ secrets.DOCKER_USERNAME }}/sample-webapp:${{ github.sha }}
+          echo "IMAGE=$IMAGE" >> $GITHUB_ENV
+          docker build -t $IMAGE .
+          docker push $IMAGE
+
+  test:
+    name: Test Stage
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - name: Checkout source
+        uses: actions/checkout@v3
 
       - name: Run unit tests
         run: |
           python -m unittest discover -s tests
 
-      - name: Update gitops repo with new image tag
-        env:
-          GITOPS_REPO: https://github.com/Yashwanth0422/add-repo.git
-          IMAGE_TAG: ${{ github.sha }}
+    
+      - name: Set up kind cluster
+        uses: helm/kind-action@v1
+        if: always() 
+        with:
+          cluster_name: ci-smoke-test
+
+      - name: Deploy to kind
+        if: always()
         run: |
-          git clone $GITOPS_REPO
+          kubectl apply -f k8s/deployment.yaml
+          kubectl rollout status deployment/sample-webapp --timeout=60s
+          kubectl get pods -o wide
+
+      - name: Run smoke tests
+        if: always()
+        run: |
+          curl -f http://localhost:8080/ || exit 1
+
+  gitops:
+    name: GitOps Deployment Stage
+    runs-on: ubuntu-latest
+    needs: test
+
+    steps:
+      - name: Checkout gitops repo
+        uses: actions/checkout@v3
+        with:
+          repository: https://github.com/Yashwanth0422/add-repo.git
+          token: ${{ secrets.PAT_TOKEN }} 
+          path: gitops-repo
+
+      - name: Update deployment manifest
+        run: |
           cd gitops-repo
-          sed -i "s|image: docker.io/your-username/sample-webapp:.*|image: docker.io/your-username/sample-webapp:${IMAGE_TAG}|g" deployment.yaml
+          sed -i "s|image: .*|image: docker.io/${{ secrets.DOCKER_USERNAME }}/sample-webapp:${{ github.sha }}|g" deployment.yaml
           git config user.email "ci@example.com"
           git config user.name "CI Bot"
           git add deployment.yaml
-          git commit -m "Deploy image tag ${IMAGE_TAG}"
+          git commit -m "Deploy image tag ${{ github.sha }}"
           git push origin main
+		 
