--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -28,7 +28,7 @@ jobs:
         run: |
           IMAGE=docker.io/${{ secrets.DOCKER_USERNAME }}/ubuntu1:${{ github.sha }}
           echo "IMAGE=$IMAGE" >> $GITHUB_ENV
-          docker build -t $IMAGE .
+          docker build -t $IMAGE -f app/Dockerfile .
           docker push $IMAGE
 
   test:
