--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -42,7 +42,7 @@ jobs:
 
       - name: Run unit tests
         run: |
-          python -m unittest discover -s tests
+          python -m unittest discover -s app/tests
 
       - name: Set up kind cluster
         uses: helm/kind-action@v1
