--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -51,7 +51,7 @@ jobs:
 
       - name: Deploy to kind
         run: |
-          kubectl apply -f k8s/deployment.yaml
+          kubectl apply -f /deployment.yaml
           kubectl rollout status deployment/deployment1 --timeout=60s
           kubectl get pods -o wide
 
