--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -51,6 +51,13 @@ jobs:
 
       - name: Deploy to kind
         run: |
+      - name: Checkout gitops repo
+        uses: actions/checkout@v3
+        with:
+          repository: Yashwanth0422/gitops-repo
+          token: ${{ secrets.PAT_TOKEN }}
+          path: gitops-repo
+
           kubectl apply -f /deployment.yaml
           kubectl rollout status deployment/deployment1 --timeout=60s
           kubectl get pods -o wide
