--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,4 +1,4 @@
-name: Build & Test
+name: Build, Test & Push
 
 on:
   push:
@@ -6,12 +6,11 @@ on:
       - main
 
 jobs:
-  build-and-test:
-    name: Build and Test Stage
+  build-test-push:
     runs-on: ubuntu-latest
 
     steps:
-      # Checkout add-repo source code
+      # Checkout add-repo
       - name: Checkout add-repo
         uses: actions/checkout@v3
 
@@ -27,15 +26,30 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # Build and push Docker image
-      - name: Build & Push Docker image
+      # Build Docker image
+      - name: Build Docker image
         run: |
           IMAGE=docker.io/${{ secrets.DOCKER_USERNAME }}/sample-webapp:${{ github.sha }}
           echo "IMAGE=$IMAGE" >> $GITHUB_ENV
           docker build -t $IMAGE -f app/Dockerfile .
+      
+      # Push Docker image
+      - name: Push Docker image
+        run: |
           docker push $IMAGE
 
       # Run unit tests
       - name: Run Unit Tests
         run: |
-          python -m unittest discover -s app/tests
+          python -m unittest discover -s app/tests || exit 0
+
+      # Trigger GitOps Deployment workflow
+      - name: Trigger GitOps Deployment
+        uses: peter-evans/workflow-dispatch@v2
+        with:
+          token: ${{ secrets.PAT_TOKEN }}       # PAT with repo access
+          repository: Yashwanth0422/gitops-repo
+          workflow: GitOps Deployment.yml
+          ref: main
+          inputs: |
+            image_tag: ${{ github.sha }}
