--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,4 +1,4 @@
-name: Build, Test & Push
+name: Build & Test
 
 on:
   push:
@@ -6,11 +6,12 @@ on:
       - main
 
 jobs:
-  build-test-push:
+  build-and-test:
+    name: Build and Test Stage
     runs-on: ubuntu-latest
 
     steps:
-      # Checkout add-repo
+      # Checkout add-repo source code
       - name: Checkout add-repo
         uses: actions/checkout@v3
 
@@ -21,3 +22,20 @@ jobs:
       # Log in to Docker registry
       - name: Docker login
         uses: docker/login-action@v2
+        with:
+          registry: docker.io
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      # Build and push Docker image
+      - name: Build & Push Docker image
+        run: |
+          IMAGE=docker.io/${{ secrets.DOCKER_USERNAME }}/sample-webapp:${{ github.sha }}
+          echo "IMAGE=$IMAGE" >> $GITHUB_ENV
+          docker build -t $IMAGE -f app/Dockerfile .
+          docker push $IMAGE
+
+      # Run unit tests
+      - name: Run Unit Tests
+        run: |
+          python -m unittest discover -s app/tests
