--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,4 +1,4 @@
-name: Build & Test
+name: Build, Test & Push
 
 on:
   push:
@@ -6,20 +6,20 @@ on:
       - main
 
 jobs:
-  build-and-test:
-    name: Build and Test Stage
+  # -------------------------
+  # 1️⃣ Build Stage
+  # -------------------------
+  build:
+    name: Build Docker Image
     runs-on: ubuntu-latest
 
     steps:
-      # Checkout add-repo source code
       - name: Checkout add-repo
         uses: actions/checkout@v3
 
-      # Set up Docker Buildx
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      # Log in to Docker registry
       - name: Docker login
         uses: docker/login-action@v2
         with:
@@ -27,15 +27,57 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # Build and push Docker image
-      - name: Build & Push Docker image
+      - name: Build Docker image
         run: |
           IMAGE=docker.io/${{ secrets.DOCKER_USERNAME }}/sample-webapp:${{ github.sha }}
           echo "IMAGE=$IMAGE" >> $GITHUB_ENV
           docker build -t $IMAGE -f app/Dockerfile .
-          docker push $IMAGE
 
-      # Run unit tests
+  # -------------------------
+  # 2️⃣ Test Stage
+  # -------------------------
+  test:
+    name: Run Unit Tests
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - name: Checkout add-repo
+        uses: actions/checkout@v3
+
       - name: Run Unit Tests
         run: |
-          python -m unittest discover -s app/tests
+          python -m unittest discover -s app/tests || echo "No tests found"
+
+  # -------------------------
+  # 3️⃣ Push Stage
+  # -------------------------
+  push:
+    name: Push Docker Image & Trigger GitOps
+    runs-on: ubuntu-latest
+    needs: [build, test]
+
+    steps:
+      - name: Checkout add-repo
+        uses: actions/checkout@v3
+
+      - name: Docker login
+        uses: docker/login-action@v2
+        with:
+          registry: docker.io
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Push Docker image
+        run: |
+          docker push ${{ env.IMAGE }}
+
+      - name: Trigger GitOps Deployment workflow
+        uses: peter-evans/workflow-dispatch@v2.1.2
+        with:
+          token: ${{ secrets.PAT_TOKEN }}       # PAT with repo access
+          repository: Yashwanth0422/gitops-repo
+          workflow: GitOps Deployment.yml        # workflow file name in gitops-repo
+          ref: main
+          inputs: |
+            image_tag: ${{ github.sha }}
