--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,4 +1,4 @@
-name: Build, Test & Push
+name: Build & Test
 
 on:
   push:
@@ -6,17 +6,20 @@ on:
       - main
 
 jobs:
-  build:
-    name: Build Docker Image
+  build-and-test:
+    name: Build and Test Stage
     runs-on: ubuntu-latest
 
     steps:
+      # Checkout add-repo source code
       - name: Checkout add-repo
         uses: actions/checkout@v3
 
+      # Set up Docker Buildx
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
+      # Log in to Docker registry
       - name: Docker login
         uses: docker/login-action@v2
         with:
@@ -24,52 +27,15 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build Docker image
+      # Build and push Docker image
+      - name: Build & Push Docker image
         run: |
           IMAGE=docker.io/${{ secrets.DOCKER_USERNAME }}/sample-webapp:${{ github.sha }}
           echo "IMAGE=$IMAGE" >> $GITHUB_ENV
           docker build -t $IMAGE -f app/Dockerfile .
+          docker push $IMAGE
 
-  test:
-    name: Run Unit Tests
-    runs-on: ubuntu-latest
-    needs: build
-
-    steps:
-      - name: Checkout add-repo
-        uses: actions/checkout@v3
-
+      # Run unit tests
       - name: Run Unit Tests
         run: |
-          python -m unittest discover -s app/tests || echo "No tests found"
-
-  
-  push:
-    name: Push Docker Image & Trigger GitOps
-    runs-on: ubuntu-latest
-    needs: [build, test]
-
-    steps:
-      - name: Checkout add-repo
-        uses: actions/checkout@v3
-
-      - name: Docker login
-        uses: docker/login-action@v2
-        with:
-          registry: docker.io
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Push Docker image
-        run: |
-          docker push ${{ env.IMAGE }}
-
-      - name: Trigger GitOps Deployment workflow
-        uses: peter-evans/workflow-dispatch@v2
-        with:
-          token: ${{ secrets.PAT_TOKEN }}       # PAT with repo access
-          repository: Yashwanth0422/gitops-repo
-          workflow: GitOps Deployment.yml        # workflow file name in gitops-repo
-          ref: main
-          inputs: |
-            image_tag: ${{ github.sha }}
+          python -m unittest discover -s app/tests
