--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -39,3 +39,28 @@ jobs:
       - name: Run Unit Tests
         run: |
           python -m unittest discover -s app/tests
+          
+name: Trigger GitOps Deployment
+
+# Trigger manually or via API, or from another workflow
+on:
+  workflow_run:
+    workflows: ["Build & Test"]
+    types:
+      - completed
+
+jobs:
+  trigger-gitops:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Trigger GitOps Deployment workflow
+        uses: peter-evans/workflow-dispatch@v2
+        with:
+          token: ${{ secrets.PAT_TOKEN }}               # Personal Access Token with write access
+          repository: Yashwanth0422/gitops-repo       # GitOps repo
+          workflow: GitOps Deployment.yml             # Exact workflow filename in gitops-repo
+          ref: main                                   # Branch to run
+          inputs: |
+            image_tag: ${{ github.event.workflow_run.head_sha }}  # Pass image tag from build
+       
