--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,4 +1,4 @@
-name: Build & Test
+name: Build, Test & Trigger GitOps
 
 on:
   push:
@@ -39,19 +39,11 @@ jobs:
       - name: Run Unit Tests
         run: |
           python -m unittest discover -s app/tests
-          
-name: Trigger GitOps Deployment
 
-# Trigger manually or via API, or from another workflow
-on:
-  workflow_run:
-    workflows: ["Build & Test"]
-    types:
-      - completed
-
-jobs:
   trigger-gitops:
+    name: Trigger GitOps Deployment
     runs-on: ubuntu-latest
+    needs: build-and-test
 
     steps:
       - name: Trigger GitOps Deployment workflow
@@ -62,5 +54,4 @@ jobs:
           workflow: GitOps Deployment.yml             # Exact workflow filename in gitops-repo
           ref: main                                   # Branch to run
           inputs: |
-            image_tag: ${{ github.event.workflow_run.head_sha }}  # Pass image tag from build
-       
+            image_tag: ${{ github.sha }}             # Pass image tag from build
