--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,4 +1,4 @@
-name: Build, Test & Trigger GitOps
+name: Build & Test
 
 on:
   push:
@@ -11,15 +11,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Checkout add-repo source code
+      
       - name: Checkout add-repo
         uses: actions/checkout@v3
 
-      # Set up Docker Buildx
+      
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      # Log in to Docker registry
+     
       - name: Docker login
         uses: docker/login-action@v2
         with:
@@ -27,7 +27,7 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # Build and push Docker image
+      
       - name: Build & Push Docker image
         run: |
           IMAGE=docker.io/${{ secrets.DOCKER_USERNAME }}/sample-webapp:${{ github.sha }}
@@ -39,19 +39,3 @@ jobs:
       - name: Run Unit Tests
         run: |
           python -m unittest discover -s app/tests
-
-  trigger-gitops:
-    name: Trigger GitOps Deployment
-    runs-on: ubuntu-latest
-    needs: build-and-test
-
-    steps:
-      - name: Trigger GitOps Deployment workflow
-        uses: peter-evans/workflow-dispatch@v2
-        with:
-          token: ${{ secrets.PAT_TOKEN }}               # Personal Access Token with write access
-          repository: Yashwanth0422/gitops-repo       # GitOps repo
-          workflow: GitOps Deployment.yml             # Exact workflow filename in gitops-repo
-          ref: main                                   # Branch to run
-          inputs: |
-            image_tag: ${{ github.sha }}             # Pass image tag from build
