--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -7,19 +7,19 @@ on:
 
 jobs:
   build-and-test:
-    name: Build and Test Stage
+    name: Build, Test & Push Image
     runs-on: ubuntu-latest
 
     steps:
-      
+      # Checkout add-repo source
       - name: Checkout add-repo
         uses: actions/checkout@v3
 
-      
+      # Set up Docker Buildx
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-     
+      # Log in to Docker Hub
       - name: Docker login
         uses: docker/login-action@v2
         with:
@@ -27,7 +27,7 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      
+      # Build and push Docker image
       - name: Build & Push Docker image
         run: |
           IMAGE=docker.io/${{ secrets.DOCKER_USERNAME }}/sample-webapp:${{ github.sha }}
@@ -39,3 +39,12 @@ jobs:
       - name: Run Unit Tests
         run: |
           python -m unittest discover -s app/tests
+
+      # Trigger GitOps repo workflow
+      - name: Trigger GitOps Deployment
+        run: |
+          curl -X POST \
+            -H "Authorization: token ${{ secrets.PAT_TOKEN }}" \
+            -H "Accept: application/vnd.github.v3+json" \
+            https://api.github.com/repos/Yashwanth0422/gitops-repo/dispatches \
+            -d '{"event_type":"update-deployment","client_payload":{"image_tag":"'"${GITHUB_SHA}"'"}}'
