--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,4 +1,4 @@
-name: Build & Test
+name: CI/CD Pipeline
 
 on:
   push:
@@ -6,20 +6,30 @@ on:
       - main
 
 jobs:
-  build-and-test:
-    name: Build, Test & Push Image
+  # ----------------- TEST STAGE -----------------
+  test:
+    name: Run Unit Tests
     runs-on: ubuntu-latest
-
     steps:
-      # Checkout add-repo source
-      - name: Checkout add-repo
+      - name: Checkout source
         uses: actions/checkout@v3
 
-      # Set up Docker Buildx
+      - name: Run Unit Tests
+        run: |
+          python -m unittest discover -s app/tests
+
+  # ----------------- BUILD STAGE -----------------
+  build:
+    name: Build & Push Docker Image
+    runs-on: ubuntu-latest
+    needs: test  # only runs if test passes
+    steps:
+      - name: Checkout source
+        uses: actions/checkout@v3
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      # Log in to Docker Hub
       - name: Docker login
         uses: docker/login-action@v2
         with:
@@ -27,7 +37,6 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # Build and push Docker image
       - name: Build & Push Docker image
         run: |
           IMAGE=docker.io/${{ secrets.DOCKER_USERNAME }}/sample-webapp:${{ github.sha }}
@@ -35,13 +44,13 @@ jobs:
           docker build -t $IMAGE -f app/Dockerfile .
           docker push $IMAGE
 
-      # Run unit tests
-      - name: Run Unit Tests
-        run: |
-          python -m unittest discover -s app/tests
-
-      # Trigger GitOps repo workflow
-      - name: Trigger GitOps Deployment
+  # ----------------- TRIGGER STAGE -----------------
+  trigger:
+    name: Trigger GitOps Deployment
+    runs-on: ubuntu-latest
+    needs: build  # only runs if build passes
+    steps:
+      - name: Trigger GitOps repo
         run: |
           curl -X POST \
             -H "Authorization: token ${{ secrets.PAT_TOKEN }}" \
