--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,4 +1,4 @@
-name: Build & Test
+name: Build, Test & Trigger GitOps
 
 on:
   push:
@@ -6,26 +6,19 @@ on:
       - main
 
 jobs:
-  test:
+  build-test-trigger:
     runs-on: ubuntu-latest
+
     steps:
+      # Checkout source repo (add-repo)
       - name: Checkout add-repo
         uses: actions/checkout@v3
 
-      - name: Run Unit Tests
-        run: |
-          python -m unittest discover -s app/tests
-
-  build:
-    runs-on: ubuntu-latest
-    needs: test
-    steps:
-      - name: Checkout add-repo
-        uses: actions/checkout@v3
-
+      # Set up Docker Buildx
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
+      # Log in to Docker Hub
       - name: Docker login
         uses: docker/login-action@v2
         with:
@@ -33,6 +26,7 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
+      # Build and push Docker image
       - name: Build & Push Docker image
         run: |
           IMAGE=docker.io/${{ secrets.DOCKER_USERNAME }}/sample-webapp:${{ github.sha }}
@@ -40,14 +34,17 @@ jobs:
           docker build -t $IMAGE -f app/Dockerfile .
           docker push $IMAGE
 
-  trigger:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Trigger GitOps Deployment
+      # Run unit tests
+      - name: Run Unit Tests
         run: |
-          curl -X POST \
-            -H "Authorization: token ${{ secrets.PAT_TOKEN }}" \
-            -H "Accept: application/vnd.github.v3+json" \
-            https://api.github.com/repos/Yashwanth0422/gitops-repo/dispatches \
-            -d '{"event_type":"update-deployment","client_payload":{"image_tag":"'"${GITHUB_SHA}"'"}}'
+          python -m unittest discover -s app/tests
+
+      # Setup SSH with Deploy Key
+      - name: Setup SSH for gitops-repo
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.DEPLOY_KEY }}" > ~/.ssh/id_ed25519
+          chmod 600 ~/.ssh/id_ed25519
+          ssh-keyscan github.com >> ~/.ssh/known_hosts
+
+      # Pus
