--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,4 +1,4 @@
-name: Build, Test & Trigger GitOps
+name: CI/CD Pipeline with GitOps
 
 on:
   push:
@@ -6,19 +6,30 @@ on:
       - main
 
 jobs:
-  build-test-trigger:
+  # ---------------------- TEST STAGE ----------------------
+  test:
+    name: Run Unit Tests
     runs-on: ubuntu-latest
-
     steps:
-      # Checkout source repo (add-repo)
-      - name: Checkout add-repo
+      - name: Checkout source
         uses: actions/checkout@v3
 
-      # Set up Docker Buildx
+      - name: Run Unit Tests
+        run: |
+          python -m unittest discover -s app/tests
+
+  # ---------------------- BUILD STAGE ----------------------
+  build:
+    name: Build & Push Docker Image
+    runs-on: ubuntu-latest
+    needs: test   # only runs if test job succeeds
+    steps:
+      - name: Checkout source
+        uses: actions/checkout@v3
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      # Log in to Docker Hub
       - name: Docker login
         uses: docker/login-action@v2
         with:
@@ -26,7 +37,6 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # Build and push Docker image
       - name: Build & Push Docker image
         run: |
           IMAGE=docker.io/${{ secrets.DOCKER_USERNAME }}/sample-webapp:${{ github.sha }}
@@ -34,12 +44,12 @@ jobs:
           docker build -t $IMAGE -f app/Dockerfile .
           docker push $IMAGE
 
-      # Run unit tests
-      - name: Run Unit Tests
-        run: |
-          python -m unittest discover -s app/tests
-
-      # Setup SSH with Deploy Key
+  # ---------------------- TRIGGER STAGE ----------------------
+  trigger:
+    name: Update GitOps Repo
+    runs-on: ubuntu-latest
+    needs: build   # only runs if build job succeeds
+    steps:
       - name: Setup SSH for gitops-repo
         run: |
           mkdir -p ~/.ssh
@@ -47,4 +57,13 @@ jobs:
           chmod 600 ~/.ssh/id_ed25519
           ssh-keyscan github.com >> ~/.ssh/known_hosts
 
-      # Pus
+      - name: Clone gitops-repo and update deployment
+        run: |
+          git clone git@github.com:Yashwanth0422/gitops-repo.git
+          cd gitops-repo
+          sed -i "s|image: .*|image: docker.io/${{ secrets.DOCKER_USERNAME }}/sample-webapp:${GITHUB_SHA}|g" deployment.yaml
+          git config user.email "ci@example.com"
+          git config user.name "CI Bot"
+          git add deployment.yaml
+          git commit -m "Deploy image tag ${GITHUB_SHA}" || echo "No changes to commit"
+          git push origin main
