--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,4 +1,4 @@
-name: CI/CD Pipeline with GitOps
+name: CI Pipeline
 
 on:
   push:
@@ -6,25 +6,23 @@ on:
       - main
 
 jobs:
-  # ---------------------- TEST STAGE ----------------------
   test:
     name: Run Unit Tests
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout source
+      - name: Checkout Source
         uses: actions/checkout@v3
 
       - name: Run Unit Tests
         run: |
           python -m unittest discover -s app/tests
 
-  # ---------------------- BUILD STAGE ----------------------
   build:
     name: Build & Push Docker Image
     runs-on: ubuntu-latest
-    needs: test   # only runs if test job succeeds
+    needs: test
     steps:
-      - name: Checkout source
+      - name: Checkout Source
         uses: actions/checkout@v3
 
       - name: Set up Docker Buildx
@@ -44,26 +42,23 @@ jobs:
           docker build -t $IMAGE -f app/Dockerfile .
           docker push $IMAGE
 
-  # ---------------------- TRIGGER STAGE ----------------------
   trigger:
-    name: Update GitOps Repo
+    name: Trigger GitOps Repo
     runs-on: ubuntu-latest
-    needs: build   # only runs if build job succeeds
+    needs: build
     steps:
-      - name: Setup SSH for gitops-repo
-        run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.DEPLOY_KEY }}" > ~/.ssh/id_ed25519
-          chmod 600 ~/.ssh/id_ed25519
-          ssh-keyscan github.com >> ~/.ssh/known_hosts
+      - name: Checkout gitops-repo
+        uses: actions/checkout@v3
+        with:
+          repository: Yashwanth0422/gitops-repo
+          ssh-key: ${{ secrets.DEPLOY_KEY }}
 
-      - name: Clone gitops-repo and update deployment
+      - name: Update Deployment.yaml
         run: |
-          git clone git@github.com:Yashwanth0422/gitops-repo.git
-          cd gitops-repo
-          sed -i "s|image: .*|image: docker.io/${{ secrets.DOCKER_USERNAME }}/sample-webapp:${GITHUB_SHA}|g" deployment.yaml
+          IMAGE=docker.io/${{ secrets.DOCKER_USERNAME }}/sample-webapp:${{ github.sha }}
+          sed -i "s|image: .*|image: $IMAGE|g" deployment.yaml
           git config user.email "ci@example.com"
           git config user.name "CI Bot"
           git add deployment.yaml
-          git commit -m "Deploy image tag ${GITHUB_SHA}" || echo "No changes to commit"
+          git commit -m "Update deployment to $IMAGE" || echo "No changes"
           git push origin main
