--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,4 +1,4 @@
-name: CI Pipeline
+name: CI Pipeline (Test, Build, Trigger)
 
 on:
   push:
@@ -6,23 +6,25 @@ on:
       - main
 
 jobs:
+  # ------------------- TEST -------------------
   test:
     name: Run Unit Tests
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Source
+      - name: Checkout add-repo
         uses: actions/checkout@v3
 
       - name: Run Unit Tests
         run: |
           python -m unittest discover -s app/tests
 
+  # ------------------- BUILD -------------------
   build:
     name: Build & Push Docker Image
     runs-on: ubuntu-latest
     needs: test
     steps:
-      - name: Checkout Source
+      - name: Checkout add-repo
         uses: actions/checkout@v3
 
       - name: Set up Docker Buildx
@@ -42,19 +44,23 @@ jobs:
           docker build -t $IMAGE -f app/Dockerfile .
           docker push $IMAGE
 
+  # ------------------- TRIGGER -------------------
   trigger:
-    name: Trigger GitOps Repo
+    name: Trigger GitOps Repo Deployment
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - name: Checkout gitops-repo
-        uses: actions/checkout@v3
-        with:
-          repository: Yashwanth0422/gitops-repo
-          ssh-key: ${{ secrets.DEPLOY_KEY }}
-
-      - name: Update Deployment.yaml
+      - name: Set up SSH for GitOps Repo
         run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.DEPLOY_KEY }}" > ~/.ssh/id_ed25519
+          chmod 600 ~/.ssh/id_ed25519
+          ssh-keyscan github.com >> ~/.ssh/known_hosts
+
+      - name: Clone gitops-repo and Update Manifest
+        run: |
+          git clone git@github.com:Yashwanth0422/gitops-repo.git
+          cd gitops-repo
           IMAGE=docker.io/${{ secrets.DOCKER_USERNAME }}/sample-webapp:${{ github.sha }}
           sed -i "s|image: .*|image: $IMAGE|g" deployment.yaml
           git config user.email "ci@example.com"
