--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,4 +1,4 @@
-name: CI Pipeline (Test, Build, Trigger)
+name: CI/CD Pipeline
 
 on:
   push:
@@ -6,30 +6,33 @@ on:
       - main
 
 jobs:
-  # ------------------- TEST -------------------
   test:
     name: Run Unit Tests
     runs-on: ubuntu-latest
     steps:
+      # Checkout add-repo code
       - name: Checkout add-repo
         uses: actions/checkout@v3
 
+      # Run unit tests
       - name: Run Unit Tests
         run: |
           python -m unittest discover -s app/tests
 
-  # ------------------- BUILD -------------------
   build:
-    name: Build & Push Docker Image
+    name: Build and Push Docker Image
     runs-on: ubuntu-latest
     needs: test
     steps:
+      # Checkout add-repo code
       - name: Checkout add-repo
         uses: actions/checkout@v3
 
+      # Set up Docker Buildx
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
+      # Docker login
       - name: Docker login
         uses: docker/login-action@v2
         with:
@@ -37,6 +40,7 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
+      # Build & push Docker image
       - name: Build & Push Docker image
         run: |
           IMAGE=docker.io/${{ secrets.DOCKER_USERNAME }}/sample-webapp:${{ github.sha }}
@@ -44,27 +48,30 @@ jobs:
           docker build -t $IMAGE -f app/Dockerfile .
           docker push $IMAGE
 
-  # ------------------- TRIGGER -------------------
-  trigger:
-    name: Trigger GitOps Repo Deployment
+  deploy-gitops:
+    name: Trigger GitOps Deployment
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - name: Set up SSH for GitOps Repo
-        run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.DEPLOY_KEY }}" > ~/.ssh/id_ed25519
-          chmod 600 ~/.ssh/id_ed25519
-          ssh-keyscan github.com >> ~/.ssh/known_hosts
+      # Checkout add-repo (just to have workspace)
+      - name: Checkout add-repo
+        uses: actions/checkout@v3
 
-      - name: Clone gitops-repo and Update Manifest
+      # Setup SSH key for GitOps repo access
+      - name: Setup SSH
+        uses: webfactory/ssh-agent@v0.7.0
+        with:
+          ssh-private-key: ${{ secrets.DEPLOY_KEY }}
+
+      # Clone gitops-repo via SSH
+      - name: Clone GitOps repo
         run: |
           git clone git@github.com:Yashwanth0422/gitops-repo.git
           cd gitops-repo
-          IMAGE=docker.io/${{ secrets.DOCKER_USERNAME }}/sample-webapp:${{ github.sha }}
-          sed -i "s|image: .*|image: $IMAGE|g" deployment.yaml
+          # Update deployment.yaml with new image
+          sed -i "s|image: .*|image: docker.io/${{ secrets.DOCKER_USERNAME }}/sample-webapp:${{ github.sha }}|g" deployment.yaml
           git config user.email "ci@example.com"
           git config user.name "CI Bot"
           git add deployment.yaml
-          git commit -m "Update deployment to $IMAGE" || echo "No changes"
+          git commit -m "Deploy image tag ${{ github.sha }}" || echo "No changes to commit"
           git push origin main
