--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,4 +1,4 @@
-name: Build, Test & Trigger GitOps
+name: CI/CD Pipeline
 
 on:
   push:
@@ -6,27 +6,37 @@ on:
       - main
 
 jobs:
-  build-test-trigger:
-    name: Test, Build & Trigger GitOps Deployment
+  # ------------------------
+  # Stage 1: Run Unit Tests
+  # ------------------------
+  test:
+    name: Run Unit Tests
     runs-on: ubuntu-latest
 
     steps:
-      # -------------------------------
-      # Stage 1: Checkout add-repo
-      # -------------------------------
       - name: Checkout add-repo
         uses: actions/checkout@v3
 
-      # -------------------------------
-      # Stage 2: Run unit tests
-      # -------------------------------
-      - name: Run Unit Tests
-        run: |
-          python -m unittest discover -s app/tests
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.9'
 
-      # -------------------------------
-      # Stage 3: Build & Push Docker Image
-      # -------------------------------
+      - name: Run Unit Tests
+        run: python -m unittest discover -s app/tests
+
+  # ------------------------
+  # Stage 2: Build & Push Docker Image
+  # ------------------------
+  build-and-push:
+    name: Build & Push Docker Image
+    runs-on: ubuntu-latest
+    needs: test
+
+    steps:
+      - name: Checkout add-repo
+        uses: actions/checkout@v3
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
@@ -44,19 +54,33 @@ jobs:
           docker build -t $IMAGE -f app/Dockerfile .
           docker push $IMAGE
 
-      # -------------------------------
-      # Stage 4: Trigger GitOps Deployment using SSH deploy key
-      # -------------------------------
+  # ------------------------
+  # Stage 3: Trigger GitOps Deployment
+  # ------------------------
+  gitops-deploy:
+    name: GitOps Deployment
+    runs-on: ubuntu-latest
+    needs: build-and-push
+
+    steps:
+      # Checkout add-repo (for environment variables)
+      - name: Checkout add-repo
+        uses: actions/checkout@v3
+
+      # Setup SSH key to access gitops-repo
       - name: Setup SSH key
         uses: webfactory/ssh-agent@v0.7.0
         with:
-          ssh-private-key: ${{ secrets.GITOPS_DEPLOY_KEY }}
+          ssh-private-key: ${{ secrets.DEPLOY_KEY }}
 
-      - name: Trigger GitOps Repo
+      # Clone gitops-repo
+      - name: Checkout gitops-repo
+        run: git clone git@github.com:Yashwanth0422/gitops-repo.git
+
+      # Update deployment.yaml with the new image tag
+      - name: Update Deployment Manifest
         run: |
-          git clone git@github.com:Yashwanth0422/gitops-repo.git
           cd gitops-repo
-          # Update deployment.yaml with new image tag
           sed -i "s|image: .*|image: docker.io/${{ secrets.DOCKER_USERNAME }}/sample-webapp:${GITHUB_SHA}|g" deployment.yaml
           git config user.email "ci@example.com"
           git config user.name "CI Bot"
