--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,7 +1,6 @@
 FROM python:3.9-slim
 WORKDIR /app
-COPY app/requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
-COPY app/ ./
-EXPOSE 8080
+COPY requirements.txt .
+RUN pip install -r requirements.txt
+COPY . .
 CMD ["python", "app.py"]
