--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -39,4 +39,13 @@ jobs:
 
     - name: Clone and update gitops repo
       env:
-        GH_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}  # Token with push access to gitops
+        GH_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}  # Token with push access to gitops repo
+      run: |
+        git clone https://x-access-token:${GH_TOKEN}@github.com/Yashwanth0422/gitops-repo.git
+        cd gitops-repo
+        sed -i "s|image: .*/sample-flask:.*|image: $IMAGE_NAME:${GITHUB_SHA}|g" deployment.yaml
+        git config user.email "ci-bot@yashwanth0422.com"
+        git config user.name "CI Bot"
+        git add deployment.yaml
+        git commit -m "Update image tag to $IMAGE_NAME:${GITHUB_SHA} [ci skip]"
+        git push origin main
