--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,4 +1,4 @@
-name: CI Pipeline
+name: CI Pipeline - Test, Build, Trigger GitOps
 
 on:
   push:
@@ -9,11 +9,12 @@ env:
   GITOPS_REPO: https://github.com/Yashwanth0422/gitops-repo.git
 
 jobs:
-  build-test-push-update-gitops:
+  test:
+    name: Run Unit Tests
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout source
+    - name: Checkout code
       uses: actions/checkout@v3
 
     - name: Set up Python
@@ -21,15 +22,25 @@ jobs:
       with:
         python-version: 3.9
 
-    - name: Install dependencies and run tests
-      run: |
-        pip install -r requirements.txt
-        pytest
+    - name: Install dependencies
+      run: pip install -r requirements.txt
+
+    - name: Run tests
+      run: pytest
+
+  build:
+    name: Build and Push Docker Image
+    needs: test
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v3
 
     - name: Log in to DockerHub
       uses: docker/login-action@v2
       with:
-        username: ${{ secrets.DOCKER_USERNAME }}  # Set this secret to 'yashwanth0422'
+        username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
     - name: Build and push Docker image
@@ -37,9 +48,15 @@ jobs:
         docker build -t $IMAGE_NAME:${{ github.sha }} .
         docker push $IMAGE_NAME:${{ github.sha }}
 
-    - name: Clone and update gitops repo
+  trigger-gitops:
+    name: Update GitOps Repo to Trigger Deployment
+    needs: build
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Clone gitops repo
       env:
-        GH_TOKEN: ${{ secrets.PAT_TOKEN }}  # Token with push access to gitops repo
+        GH_TOKEN: ${{ secrets.PAT_TOKEN }}
       run: |
         git clone https://x-access-token:${GH_TOKEN}@github.com/Yashwanth0422/gitops-repo.git
         cd gitops-repo
